Clean up TODOs
Signed-off-by: Derek Ho <dxho@amazon.com>